cluster/k8s/capacitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: capacitor
  labels:
    app.kubernetes.io/name: capacitor
spec:
  selector:
    app.kubernetes.io/name: capacitor
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
